--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,7 @@ assets/
 SedSat3/x64/Debug/qmake/
 
 SedSat3/x64/Debug/
+
+build/Desktop_Qt_5_15_2_GCC_64bit-Debug/
+
+build/Desktop_Qt_6_8_2-Debug/
