--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,7 @@ assets/
 SedSat3/x64/Debug/qmake/
 
 SedSat3/x64/Debug/
+
+.vs/SedSat3/copilot-chat/cc4838ad/sessions/
+
+.vs/SedSat3/CopilotIndices/17.12.53.23981/
