--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,5 @@ build/Desktop_Qt_5_15_2_GCC_64bit-Debug/
 build/Desktop_Qt_6_8_2-Debug/
 
 build/Debug/
+
+.vs/SedSat3/CopilotIndices/17.12.53.23981/
